# mcp-rag-starter

./: .gitignore  BUILD_SUMMARY.txt  CHANGELOG.md  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
evaluation/: README.md  eval_set.json  run_eval.py
scripts/: make_example_pdf.py  make_social.py
src/mcp_rag_starter/: __init__.py  __main__.py  bm25.py  chunking.py  citations.py  config.py  embeddings.py  hybrid.py  ingestion.py  rerank.py  server.py  vector_store.py
tests/: __init__.py  test_chunking.py  test_citations.py  test_config.py  test_hybrid.py
