[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-rag-starter"
version = "0.1.0"
description = "Production grade RAG packaged as an MCP server"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Kerry Dean Jr", email = "kdjsplash@gmail.com"}
]
keywords = ["mcp", "rag", "vector-search", "retrieval", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=0.1.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "rank-bm25>=0.2.2",
    "cross-encoder>=0.2.21",
    "pypdf>=3.16.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/whodeanie/mcp-rag-starter"
Repository = "https://github.com/whodeanie/mcp-rag-starter"
Issues = "https://github.com/whodeanie/mcp-rag-starter/issues"

[tool.setuptools]
packages = ["mcp_rag_starter"]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 100
target-version = "py310"
extend-select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.isort]
known-first-party = ["mcp_rag_starter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/mcp_rag_starter --cov-report=term-missing"
python_files = ["test_*.py"]

[tool.black]
line-length = 100
target-version = ["py310"]
